WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
69122
DFG JIT - register not unlocked after usage in ArithDiv
https://bugs.webkit.org/show_bug.cgi?id=69122
Summary
DFG JIT - register not unlocked after usage in ArithDiv
Yuqiang Xian
Reported
2011-09-29 20:18:46 PDT
Some allocated register is not unlocked after the usage in ArithDiv. Also there's a typo in "ENBALE_DFG_CONSISTENTCY_CHECK".
Attachments
the patch
(2.93 KB, patch)
2011-09-29 20:21 PDT
,
Yuqiang Xian
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Yuqiang Xian
Comment 1
2011-09-29 20:21:08 PDT
Created
attachment 109247
[details]
the patch
Geoffrey Garen
Comment 2
2011-09-29 21:57:48 PDT
Comment on
attachment 109247
[details]
the patch r=me
Gavin Barraclough
Comment 3
2011-09-29 22:01:06 PDT
Comment on
attachment 109247
[details]
the patch Good catch!
WebKit Review Bot
Comment 4
2011-09-29 22:15:04 PDT
Comment on
attachment 109247
[details]
the patch Clearing flags on attachment: 109247 Committed
r96389
: <
http://trac.webkit.org/changeset/96389
>
WebKit Review Bot
Comment 5
2011-09-29 22:15:08 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug