DFG JIT - register not unlocked after usage in ArithDiv https://bugs.webkit.org/show_bug.cgi?id=69122

Patch by Yuqiang Xian <yuqiang.xian@intel.com> on 2011-09-29
Reviewed by Geoffrey Garen.

Some allocated register is not unlocked after the usage in ArithDiv.
Also there's a typo in "ENBALE_DFG_CONSISTENTCY_CHECK".

* dfg/DFGNode.h:
* dfg/DFGSpeculativeJIT32_64.cpp:
(JSC::DFG::SpeculativeJIT::compile):
* dfg/DFGSpeculativeJIT64.cpp:
(JSC::DFG::SpeculativeJIT::compile):

Canonical link: https://commits.webkit.org/85152@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@96389 268f45cc-cd09-0410-ab3c-d52691b4dbfc